# ai_git_tool

./: .env  .gitignore  CODE_OF_COUNDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  setup.py
ai_git/: cli.py
ai_git/commands/: clone.py
ai_git/utils/: ai_utils.py  github_api.py  test.py
ai_git_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
